# zadanie2

./: CMakeLists.txt
client/includes/: PassengerImpl.h
client/src/: PassengerImpl.cpp
shared/: SIP.cpp  SIP.h  SIP.ice
system/: makefile  system
system/includes/: DepoImpl.h  LineImpl.h  MPKImpl.h  StopImpl.h  system.h
system/src/: DepoImpl.cpp  LineImpl.cpp  MPKImpl.cpp  StopImpl.cpp  system.cpp
tram/includes/: TramImpl.h
tram/src/: TramImpl.cpp
